--- a/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -25,8 +25,7 @@
             you will see more of my travels,
             what I like to do for fun,
             and core pieces of me.
-            <br />
-            <img src="~/Images/home/homebike3.jpg" width="300px" height="400px" class="border-0 rounded">
+            <img src="~/Images/home/motorcycle/homebike3.jpg" width="300px" height="400px" class="border-0 rounded">
             <p>todo: make image line to next resource</p>
 
         </div>
@@ -50,7 +49,6 @@
         <div class="col" style="border: 1px solid red;">
             I picked up motorcycling as an exciting hobby as a teenager,
             traveling around the states in my evenings and weekends!
-            <br />
             <img src="~/Images/home/homehelmetinworklol1.jpg" width="300px" height="400px" class="border-0 rounded">
             <p>todo: make image line to next resource</p>
         </div>
@@ -62,7 +60,6 @@
         <div class="col-6" style="border: 1px solid red;">
             I have experience directing the software processes behind automotive large shows, 
             as well as first hand physical layer support for internal users of intranet applications.
-            <br />
             <img src="~/Images/home/homemiwork1.jpg" width="400px" height="300px" class="border-0 rounded">
             <p>todo: make image line to next resource</p>
         </div>
@@ -71,6 +68,82 @@
         </div>
         <div class="col-3" style="border: 1px solid red;">
             test
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            <div style="border: 1px solid red;">
+                I have managed and upgraded software systems in Los Angeles, Tennesee, and Detroit.
+                Warehousing software ranges from the initial definition of what is included in a show, to the
+                logistical transportation of goods to the show itself all through intranet software.
+                <br />
+                <img src="~/Images/home/home1.jpg" width="400px" height="300px" class="border-0 rounded">
+                <p>todo: make image line to next resource</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            <div style="border: 1px solid red;">
+                I grew up in Royal Oak Michigan. I decided at a young age that I loved technology sciences. 
+                Before I was a teenager, I was an avid gamer and still am to this day.
+                <br />
+                <img src="~/Images/home/home1.jpg" width="400px" height="300px" class="border-0 rounded">
+                <p>todo: make image line to next resource</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            <div style="border: 1px solid red;">
+                I grew up in Royal Oak Michigan. I decided at a young age that I loved technology sciences.
+                Before I was a teenager, I was an avid gamer and still am to this day.
+                <img src="~/Images/home/home1.jpg" width="400px" height="300px" class="border-0 rounded">
+                <p>todo: make image line to next resource</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            <div style="border: 1px solid red;">
+                test
+            </div>
         </div>
     </div>
 </div>
