--- a/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
     string homeImagesIndex = "";
 }
 
+@model HomeViewModel
+
 <div class="container text-center">
     <h3 class="display-4">Hello, my name is Tylor Trub.</h3>
     <p>I am a full-stack developer, with a C#.NET back-end focus.</p>
@@ -147,3 +149,10 @@
         </div>
     </div>
 </div>
+
+
+@for (int i = 0; i < Model.motorcycleVideoList.Count; i++)
+{
+    <h2>Custom video number: @i</h2>
+    <iframe src="@Model.motorcycleVideoList[i].VideoUrl" width="1600" height="900" frameborder="0" allowfullscreen></iframe>
+}
