--- a/TylorBookStore/Areas/Admin/Views/Motorcycle/Collection.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Motorcycle/Collection.cshtml
@@ -1,7 +1,33 @@
 ﻿@{
     string videoPath = "/videos/motorcycle/";
     string picturePath = "/Images/home/motorcycle/";
+    //string appDataDir = Environment.GetFolderPath(Environment.SpecialFolder.ApplicationData) + "\\TylorTrubPortfolio";
+    string appDataDirApp = Environment.GetFolderPath(Environment.SpecialFolder.ApplicationData) + "\\TylorTrubPortfolio\\";
+
+    bool DownloadImage(string imageName, byte[] imageBytes)
+    {
+        try
+        {
+            if (!Directory.Exists(appDataDirApp))
+            {
+                Directory.CreateDirectory(appDataDirApp);
+            }
+            // check if image already exists before wasting bandwidth.
+            if (!File.Exists(appDataDirApp + imageName))
+            {
+                File.WriteAllBytes(appDataDirApp + imageName, imageBytes);
+            }
+        }
+        catch (Exception)
+        {
+            
+        }
+
+        return true;
+    }
 }
+
+@model HomeViewModel
 
 <div id="video-player" class="embed-responsive embed-responsive-16by9 text-center">
     <h2>Motorcycling Videos</h2>
@@ -34,5 +60,34 @@
     <img class="col-4 rounded" src="@(picturePath)homebike1.jpg" />
     <img class="col-4 rounded" src="@(picturePath)homebikedetroit1.jpg" />
     <img class="col-4 rounded" src="@(picturePath)homebikejoslyn1.jpg" />
+
+    @for (int i = 0; i < Model.MotorcycleVideoList.Count; i++)
+    {
+        <iframe src="@Model.MotorcycleVideoList[i].VideoUrl" width="1600" height="900" frameborder="0" allowfullscreen></iframe>
+    }
+
+    
+    <p>CAROUSEL TEST 2</p>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="..." alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
 </div>
