--- a/TylorBookStore/Areas/Admin/Views/Product/Index.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Product/Index.cshtml
@@ -23,14 +23,16 @@
         </div>
     </div>
     <table id="tblData" class="table table-bordered table-striped">
-        <tr>
-            <th>Title</th>
-            <th>ISBN</th>
-            <th>Price</th>
-            <th>Author</th>
-            <th>Category</th>
-            <th></th>
-        </tr>
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>ISBN</th>
+                <th>Price</th>
+                <th>Author</th>
+                <th>Category</th>
+                <th></th>
+            </tr>
+        </thead>
     </table>
 </div>
 
