--- a/TylorBookStore/Areas/Customer/Views/Home/MVCDemo.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Home/MVCDemo.cshtml
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                         <div>
-                            <a asp-route-productId="@product.Id" asp-controller="Home" asp-action="Details" class="btn btn-primary bg-gradient border-0 form-control">
+                            <a asp-route-Id="@product.Id" asp-controller="Home" asp-action="Details" class="btn btn-primary bg-gradient border-0 form-control">
                                 Details
                             </a>
                         </div>
