--- a/TylorBookStore/Areas/Admin/Views/Motorcycle/Collection.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Motorcycle/Collection.cshtml
@@ -29,14 +29,46 @@
 
 @model HomeViewModel
 
+<div class="container-fluid p-0 @Model.MotorcycleVideoList[0].Id">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators" >
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="/Images/home/home1.jpg" class="img-fluid" alt="01" />
+        </div>
+        <div class="carousel-item">
+            <img src="/Images/home/home2.jpg" class="img-fluid" alt="02" />
+        </div>
+        <div class="carousel-item">
+            <img src="/Images/home/home3.jpg" class="img-fluid" alt="03" />
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+</div>
+
+<h2>Motorcycling Videos</h2>
 <div id="video-player" class="embed-responsive embed-responsive-16by9 text-center">
-    <h2>Motorcycling Videos</h2>
 
     <div class="d-flex justify-content-center border-0">
-        <video src="@(videoPath)vet.mp4" style="border-radius: 10px;" controls></video>
+        <div class="col"></div>
+        <video class="col-10" src="@(videoPath)vet.mp4" style="border-radius: 10px;" controls></video>
+        <div class="col"></div>
     </div>
     <div class="row">
-        <div class="col-4">
+        <div class="col-2"></div>
+        <div class="col-2">
             <button class="btn btn-primary container-fluid">
                 LEFT
             </button>
@@ -44,11 +76,12 @@
         <div class="col-4 p-2">
             TITLE - Video
         </div>
-        <div class="col-4">
+        <div class="col-2">
             <button class="btn btn-primary container-fluid">
                 RIGHT
             </button>
         </div>
+        <div class="col-2"></div>
     </div>
 </div>
 <br />
@@ -57,15 +90,23 @@
 <div class="row d-flex text-center justify-content-center border-0">
     <h2>Motorcycling pictures</h2>
 
-    <img class="col-4 rounded" src="@(picturePath)homebike1.jpg" />
-    <img class="col-4 rounded" src="@(picturePath)homebikedetroit1.jpg" />
-    <img class="col-4 rounded" src="@(picturePath)homebikejoslyn1.jpg" />
+    <img class="col-3 rounded" src="@(picturePath)homebike1.jpg" />
+    <div class="col"></div>
+    <img class="col-3 rounded" src="@(picturePath)homebikedetroit1.jpg" />
+    <div class="col"></div>
+    <img class="col-3 rounded" src="@(picturePath)homebikejoslyn1.jpg" />    
+    <div class="col"></div>
+
 
     @for (int i = 0; i < Model.MotorcycleVideoList.Count; i++)
     {
         <iframe src="@Model.MotorcycleVideoList[i].VideoUrl" width="1600" height="900" frameborder="0" allowfullscreen></iframe>
     }
 
+    @foreach (var video in Model.MotorcycleVideoList)
+    {
+        
+    }
     
     <p>CAROUSEL TEST 2</p>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
