Updated privacy statement.

--- a/TylorBookStore/Areas/Customer/Views/Home/Privacy.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Home/Privacy.cshtml
@@ -3,4 +3,9 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>My (Tylor Trub) site does not collect personally identifiable information about the actions made,
+    or patterns of usage of the site. Feel free to go wild and attempt to break anything, 
+    knowing that I am not liable for any mistakes you make.
+
+    Thank you for your understanding, Tylor.
+</p>
