Updated all page titles to match the precedented styling.

--- a/TylorBookStore/Areas/Admin/Views/Motorcycle/Collection.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Motorcycle/Collection.cshtml
@@ -1,4 +1,8 @@
 ﻿@{
+    ViewData["Title"] = "Motorcycle Collection";
+}
+
+@{
     string videoPath = "/videos/motorcycle/";
     string picturePath = "/Images/home/motorcycle/";
     //string appDataDir = Environment.GetFolderPath(Environment.SpecialFolder.ApplicationData) + "\\TylorTrubPortfolio";
