--- a/TylorBookStore/Areas/Admin/Views/Motorcycle/Details.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Motorcycle/Details.cshtml
@@ -1,4 +1,8 @@
-﻿<h1>Motorcycle details:</h1>
+﻿@{
+    ViewData["Title"] = "Motorcycle Details";
+}
+
+<h1>Motorcycle details:</h1>
 
 @model Motorcycle
 <form method="post">
