--- a/TylorBookStore/Areas/Customer/Views/Games/Index.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Games/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<h1>Welcome to the gaming section of my portfolio.</h1>
+﻿@{
+    ViewData["Title"] = "Gaming Index";
+}
+
+<h1>Welcome to the gaming section of my portfolio.</h1>
 
 <table class ="table table-bordered table-striped table-dark">
     <tr>
