--- a/TylorBookStore/Areas/Customer/Views/Home/Details.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Home/Details.cshtml
@@ -1,4 +1,8 @@
-﻿@model Product
+﻿@{
+    ViewData["Title"] = "Product Details";
+}
+
+@model Product
 
 <form method="post">
     <div class="card shadow border-0 mt-4 mb-4">
