--- a/TylorBookStore/Areas/Admin/Views/Motorcycle/Index.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Motorcycle/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model List<Motorcycle>
+﻿@{
+    ViewData["Title"] = "Motorcycles Index";
+}
+
+@model List<Motorcycle>
 <div class="container text-center">
     <h1>
         Welcome to the Motorcycle section of my portfolio!
