--- a/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
@@ -4,9 +4,10 @@
 
 @model List<SimonSays>
 
-<div class="container">
 
-    <h2>NEW!</h2>
+<div class="container">
+    <script src="~/js/simon.js"></script>
+    <script>simonMain();</script>
 
     <div style="position:relative; width:100%;  margin:auto; display:block;">
         <div style="position: relative; border-radius: 50%; margin: auto; padding: 5vmin; width: 75vmin; height: 75vmin; background: rgba(0,0,49,0.6); ">
@@ -14,21 +15,14 @@
 
                 @for (int i = 0; i < Model.Count; i++) // four simon says blocks
                 {
-                    <a onclick="location.href='@Url.Action("SimonSays", "Games", Model[i])'" class="btn-simon btn-simon-@Model[i].currentColor" style="opacity: 0.3;" asp-controller="Games" asp-action="SimonSays" name="SimonSays">
-                        test aab4
+                    <a id="@i" class="btn-simon btn-simon-@Model[i].currentColor" style="opacity: 0.3;">
+                        
                     </a>
                 }
-                <div id="circ" style="position: absolute; margin: 30% 30%; border-radius: 50%; border: 3px solid #111; width: 38%;   height: 38%; background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 60%, #777777 80%), #004; color: #fff; box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);">
+                <div id="circ" style="position: absolute; margin: 30% 30%; border-radius: 50%; border: 3px solid #111; width: 38%;   height: 38%; background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 60%, #777777 80%), #004; color: #fff; box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);" onclick="circDo()">
                 </div>
             </div>
-            <div id="msg" style="display: flex; align-items: center; justify-content: center; text-align: center; position: absolute; left: 40%; top: 40%; font: 9vmin Arial; width: 20%; height: 20%; color: rgb(187, 204, 255); pointer-events: none;">
-                <a asp-controller="Games" asp-action="SimonSays" name="SimonSays">
-                    @((int)TempData["test"] != 0 ? (int)TempData["test"] : "Play")
-                </a>
-            </div>
+            <div id="msg" style="display: flex; align-items: center; justify-content: center; text-align: center; position: absolute; left: 40%; top: 40%; font: 9vmin Arial; width: 20%; height: 20%; color: white; pointer-events: none;">PRESS ME</div>
         </div>
-    </div>
-    <div id="myDiv" class="container" runat="server"> 
-        Test
     </div>
 </div>
