Added authorization to category controller. Added auth to product controller. Added view import utility using statements. Added auth to show admin only page for creation of new categories and books.

--- a/TylorBookStore/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TylorTrubPortfolio
 @using TylorTrubPortfolio.Models
 @using TylorTrubPortfolio.Models.ViewModels
+@using TylorTrubPortfolio.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
