--- a/TylorBookStore/Areas/Customer/Views/_ViewImports.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TylorTrubPortfolio
 @using TylorTrubPortfolio.Models
 @using TylorTrubPortfolio.Models.ViewModels
+@using TylorTrubPortfolio.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
