--- a/TylorBookStore/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/TylorBookStore/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using TylorTrubPortfolio.Areas.Identity
 @using TylorTrubPortfolio.Areas.Identity.Pages
+@using TylorTrubPortfolio.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
