--- a/TylorBookStore/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/TylorBookStore/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,11 +1,11 @@
-﻿@* @{
+﻿@{
     if (ViewData.TryGetValue("ParentLayout", out var parentLayout) && parentLayout !=  null)
     {
         Layout = parentLayout.ToString();
     }
     else
     {
-        Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+        Layout = "/Views/Shared/_Layout.cshtml";
     }
 }
 
@@ -27,4 +27,3 @@
 @section Scripts {
     @RenderSection("Scripts", required: false)
 }
- *@
