Renamed bookstore to portfolio.

--- a/TylorBookStore/Views/Shared/_Layout.cshtml
+++ b/TylorBookStore/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title class="bg-primary">@ViewData["Title"] - Tylor's Book Store</title>
+    <title class="bg-primary">@ViewData["Title"] - Tylor Trub's Portfolio'</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TylorTrubPortfolio.styles.css" asp-append-version="true" />
