--- a/TylorPortfolio/Areas/Customer/Views/Games/Hangman.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Games/Hangman.cshtml
@@ -7,9 +7,10 @@
     <div class="float-right">Wrong Guesses: <span id='mistakes'>0</span> of <span id='maxWrong'></span></div>
     <div class="text-center">
         <img id='hangmanPic' src="./images/0.jpg" alt="">
-        <p>Guess the Programming Language:</p>
+        <p>Guess the Word:</p>
         <p id="wordSpotlight">The word to be guessed goes here</p>
         <div id="keyboard"></div>
+        <br />
         <button class="btn btn-info" onClick="reset()">Reset</button>
     </div>
 </div>
